# hyprpy

./: README.md  default.nix  flake.nix  pyproject.toml
hyprpy/: events.py  main.py  sockets.py
